--- a/pom.xml
+++ b/pom.xml
@@ -37,9 +37,10 @@
             <artifactId>selenium-java</artifactId>
             <version>3.141.59</version>
         </dependency>
+
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
             <version>RELEASE</version>
             <scope>test</scope>
         </dependency>
