Used Selenide, HTMLElements and methods chaining.

--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,22 @@
             <version>RELEASE</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.codeborne</groupId>
+            <artifactId>selenide</artifactId>
+            <version>5.23.3</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>ru.yandex.qatools.htmlelements</groupId>
+            <artifactId>htmlelements-java</artifactId>
+            <version>1.19</version> <!-- 1.18+ is SELENIUM 3.5.1+ compatible -->
+        </dependency>
+
     </dependencies>
+
+
 
 </project>
