--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,12 @@
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+            <version>5.7.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
             <version>5.7.2</version>
             <scope>compile</scope>
@@ -69,6 +75,7 @@
             <version>2.14.0</version>
             <scope>test</scope>
         </dependency>
+
     </dependencies>
     <build>
         <plugins>
@@ -121,8 +128,8 @@
                 <version>2.8</version>
                 <configuration>
                     <reportVersion>2.13.4</reportVersion>
-<!--                    <allureDownloadUrl>https://github.com/allure-framework/allure2/releases/download/%s/allure-%s.zip</allureDownloadUrl>-->
-<!--                    <installDirectory>${project.build.directory}</installDirectory>-->
+                    <!--                    <allureDownloadUrl>https://github.com/allure-framework/allure2/releases/download/%s/allure-%s.zip</allureDownloadUrl>-->
+                    <!--                    <installDirectory>${project.build.directory}</installDirectory>-->
                     <allureDownloadUrl>https://repo1.maven.org/maven2/io/qameta/allure/allure-commandline/2.13.4/allure-commandline-2.13.4.zip</allureDownloadUrl>
                     <resultsDirectory>allure-results</resultsDirectory>
                 </configuration>
