--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,3 +1,3 @@
 URL=https://tt-develop.quality-lab.ru
-CORRECT_LOGIN=Авто Пользователь
-CORRECT_PASSWORD=12345678
+CORRECT_LOGIN=Сергей Оралов
+CORRECT_PASSWORD=pwd4hotelRA
