Last changes after review

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -4,3 +4,6 @@ CORRECT_PASSWORD=pwd4hotelRA
 KEY=wvS9fmlcgT6jOIO6tyhESV55F6dbNpk3PeWkobf8
 PORT=443
 PATH=/api/v2/public
+INCORRECT_LOGIN =TestUser
+INCORRECT_PASSWORD =Password
+COOKIE=PHPSESSID=6d7e7a307156309ec41a3f21508d7aa0
