--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,6 +1,6 @@
 URL=https://tt-develop.quality-lab.ru
-CORRECT_LOGIN=Сергей Оралов
-CORRECT_PASSWORD=pwd4hotelRA
+CORRECT_LOGIN=***************
+CORRECT_PASSWORD=**************
 KEY=wvS9fmlcgT6jOIO6tyhESV55F6dbNpk3PeWkobf8
 PORT=443
 PATH=/api/v2/public
